<resources>
    <string name="app_name">Munchkin Helper</string>
    <string name="how_many_players">Amount of players</string>
    <string name="start_game">Start new game</string>
    <string name="invalid_amount_players">"Amount of players must be beetween 1–9 "</string>
    <string name="level" translatable="false">level</string>
    <string name="one" translatable="false">1</string>
    <string name="player_name">Player name</string>
    <string name="end">End of the game!</string>
    <string name="winner">Player with name: %1$s reached 10 lvl and he win!!</string>
    <string name="stay">Stay</string>
    <string name="reset">Reset</string>
    <string name="fight">Fight</string>
    <string name="vs" translatable="false">vs</string>
    <string name="x" translatable="false">x</string>
    <string name="player">Player</string>
    <string name="click_on_player">Click on player</string>
    <string name="monster">Monster</string>
    <string name="players">Players</string>
    <string name="power_counter">Power counting</string>
    <string name="power">power</string>
    <string name="load_game">Load game</string>
    <string name="add">Add</string>
    <string name="first_player">Player 1</string>
    <string name="player_added">Player added</string>
    <string name="menu_game">Game</string>
    <string name="menu_dice">Dice</string>
    <string name="menu_history">History</string>
    <string name="menu_scheme">Scheme</string>
    <string name="back_pressed_title">Backing</string>
    <string name="back_pressed_body">Are you sure you want to go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="roll">Throw</string>
    <string name="menu_fight">Fight</string>
    <string name="choose_player">Choose player</string>
    <string name="add_one" translatable="false">+1</string>
    <string name="add_two" translatable="false">+2</string>
    <string name="add_three" translatable="false">+3</string>
    <string name="add_five" translatable="false">+5</string>
    <string name="add_ten" translatable="false">+10</string>
    <string name="minus_one" translatable="false">-1</string>
    <string name="minus_two" translatable="false">-2</string>
    <string name="minus_three" translatable="false">-3</string>
    <string name="minus_five" translatable="false">-5</string>
    <string name="minus_ten" translatable="false">-10</string>
    <string name="players_fight">Player/s</string>
    <string name="choose_assistant">Choose asistant</string>
    <string name="nobody">Nobody</string>
    <string name="name_lenght_error">Player name can not be empty\nand have less than 20 letters</string>
    <string name="player_count_error">You have to add minimum 2 players</string>
    <string name="adding_players">Additioning Players</string>
    <string name="history">History</string>
    <string name="schemes">Schemes</string>
    <string name="no_history_games">There is no history games</string>
    <string name="no_schemes">You didn\'t add any scheme</string>
    <string name="adding_scheme_dialog_title">Adding scheme</string>
    <string name="editText_scheme_hint">Name of scheme</string>

    <string name="deleting_scheme_title">Deleting scheme</string>
    <string name="deleting_scheme_body">Are you sure about deleting that scheme?</string>

    <string name="deleting_history_title">Deleting history game</string>
    <string name="deleting_history_body">Are you sure about deleting that game?</string>
    <string name="delete">delete</string>
    <string name="delete_game">Delete Game</string>
    <string name="choose_fighter">Firstly choose player who fight</string>
    <string name="game_updated">Game saved</string>
    <string name="settings">Settings</string>
    <string name="auto_save">Auto-save</string>
    <string name="sound">Sound</string>
    <string name="save">Save</string>
    <string name="death">Death</string>
    <string name="poor_end">"Poor End: "</string>
    <string name="baked_and_eaten_end">you get baked and eaten. You die</string>
    <string name="dice3d">Dice 3D</string>
    <string name="more">More</string>
    <string name="delete_scheme">Delete Scheme</string>
    <string name="edit">Edit</string>
    <string name="load_last_game">Load Last Game</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="death_count">Death count: %d</string>
    <string name="death_count_title">Deaths</string>
    <string name="death_count_setting">Show death count</string>
    <string name="reset_game_title">Reset Game</string>
    <string name="reset_game_body">Are you sure about reseting that game?</string>
    <string name="debug_open" translatable="false">Debug open</string>
    <string name="user_data_dialog_title" translatable="false">Ciach</string>
    <string name="delete_player">Delete player</string>
</resources>
