<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/first_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/count_player_textView" android:textSize="18sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_player_editText" android:hint="@string/player_name"/>
    <Button
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/add_player_button"/>
</LinearLayout>