<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:background="@color/colorBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/linearLayout_player1"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/first_player_fight"
                android:text="@string/choose_player"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Spinner
                android:id="@+id/first_player_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/linearLayout_player1"
            android:orientation="vertical">

        <TextView
                android:id="@+id/assistant_player_fight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/choose_assistant"/>

        <Spinner
                android:id="@+id/assistant_player_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
            android:id="@+id/headers_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_below="@+id/linearLayout_player1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:text="@string/players_fight"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/monster"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/powers_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/headers_linearLayout">
        <EditText
                android:id="@+id/player_power_fight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="1" android:inputType="numberSigned"/>
        <EditText
                android:id="@+id/monster_power_fight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/one"
                android:layout_weight="1" android:inputType="numberSigned"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/powers_linearLayout"
            android:weightSum="2">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:weightSum="2">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:weightSum="5"
                          android:orientation="vertical"
                          style="?android:attr/buttonBarStyle"
                          android:layout_weight="1">

                <Button
                        android:layout_width="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_one" android:id="@+id/player_add_1"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_two" android:id="@+id/player_add_2"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_three" android:id="@+id/player_add_3"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/add_five" android:id="@+id/player_add_5"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/add_ten" android:id="@+id/player_add_10"/>
            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:weightSum="5"
                          android:orientation="vertical"
                          style="?android:attr/buttonBarStyle"
                          android:layout_weight="1">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_weight="1"
                        android:text="@string/minus_one" android:id="@+id/player_minus_1"/>
                <Button
                        android:layout_width="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/minus_two" android:id="@+id/player_minus_2"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_weight="1"
                        android:text="@string/minus_three" android:id="@+id/player_minus_3"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_height="wrap_content"
                        android:text="@string/minus_five" android:id="@+id/player_minus_5"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_height="wrap_content"
                        android:text="@string/minus_ten" android:id="@+id/player_minus_10"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:layout_weight="1">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:weightSum="5"
                          android:orientation="vertical"
                          style="?android:attr/buttonBarStyle"
                          android:layout_weight="1">

                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_one" android:id="@+id/monster_add_1"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_two" android:id="@+id/monster_add_2"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_three" android:id="@+id/monster_add_3"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/add_five" android:id="@+id/monster_add_5"/>
                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/add_ten" android:id="@+id/monster_add_10"/>
            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:weightSum="5"
                          android:orientation="vertical"
                          style="?android:attr/buttonBarStyle"
                          android:layout_weight="1">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_weight="1"
                        android:text="@string/minus_one" android:id="@+id/monster_minus_1"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_weight="1"
                        android:text="@string/minus_two" android:id="@+id/monster_minus_2"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_weight="1"
                        android:text="@string/minus_three" android:id="@+id/monster_minus_3"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_height="wrap_content"
                        android:text="@string/minus_five" android:id="@+id/monster_minus_5"/>
                <Button
                        android:layout_width="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/minus_ten" android:id="@+id/monster_minus_10"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>






</RelativeLayout>