<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="166dp"
            android:layout_height="45dp"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/players_amount"
            android:hint="@string/how_many_players" android:layout_marginTop="101dp"
            android:layout_marginStart="8dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>
    <Button
            android:text="@string/start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/start_game"
            android:layout_marginTop="10dp" android:layout_below="@+id/with_power_switch"/>
    <Switch
            android:text="@string/power_counter"
            android:layout_width="162dp"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/with_power_switch" android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/players_amount"/>
    <Button
            android:text="@string/restore_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:id="@+id/backup_button"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/start_game"/>

</RelativeLayout>