<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/load_game_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schemes"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/load_game_viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/load_game_tab_layout"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <gerard.example.munchkinhelper.core.views.RoundedButton
            android:id="@+id/btn_startNewGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/start_game">
    </gerard.example.munchkinhelper.core.views.RoundedButton>

</androidx.constraintlayout.widget.ConstraintLayout>