<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6"/>


        <gerard.example.munchkinhelper.core.views.EditTextWithTitle
                android:id="@+id/players_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_04"
                android:layout_weight="2"
                app:editTextTitle="@string/players_fight"/>

        <TextView
                android:id="@+id/vs_txtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toTopOf="@+id/players_count"
                app:layout_constraintBottom_toBottomOf="@+id/players_count"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_04"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_06"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/vs"/>

        <gerard.example.munchkinhelper.core.views.EditTextWithTitle
                android:id="@+id/monsters_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/players_count"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_06"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_weight="2"
                app:editTextTitle="@string/monster"/>

        <gerard.example.munchkinhelper.core.views.FightCounter
                android:id="@+id/players_counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_04"
                app:layout_constraintTop_toBottomOf="@+id/players_count"/>

        <gerard.example.munchkinhelper.core.views.FightCounter
                android:id="@+id/monsters_counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_06"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monsters_count"/>




</androidx.constraintlayout.widget.ConstraintLayout>